# django_example

./: pyproject.toml
auth/: forms.py  urls.py  views.py
boilerplate/: .env  settings.py  urls.py
example/: admin.py  forms.py  models.py  urls.py  views.py
example/migrations/: 0001_initial.py  0002_newsitem_likes.py
example/templates/: generic_form.html  index.html  layout.html  newsaddform.html
templates/: author_add.html  generic_form.html  index.html  layout.html  loginview.html  logoutview.html
